# tsqbev-poc

./: .dockerignore  .gitignore  .latteignore  AGENTS.md  CONTRIBUTING.md  README.md  RELEASE.md  SOUL.md  latte.yaml  program.md  pyproject.toml
compat/: numba.py  sitecustomize.py
docker/: Dockerfile.cpu  Dockerfile.ray-gpu  README.md
docs/: agenda-2026-04-02.md  agenda-2026-04-04.md  architecture.md  bevfusion-baseline-runbook.md  dinov2-camera-branch-2026-04-04.md  dinov3-assets.md  foundation-teacher-direction-2026-04-04.md  frontier-breakthrough-insights.md  frontier-knowledge-base.md  frontier-reset-checklist.md  hard-pivot-execution.md  kd-reset-2026-04-03.md  lane-datasets.md  meta-harness-v2.md  mit-han-efficient-ml-playbook.md  openpcdet-centerpoint-teacher.md  plan.md  reference-matrix.md  research-agenda.md  research-assets.md  research-memory.md  sam2-assets.md  scaling-gates.md  stack-reset.md  steering.md  teacher-bootstrap.md  think-while-training.md  training-baselines.md  upstream-baselines.md  v16-direction-review.md
research/: README.md
specs/: 000-bootstrap.md  001-data-contract.md  002-model-contract.md  003-performance-contract.md  004-research-loop-contract.md  005-scale-gate-contract.md  006-lidar-teacher-bootstrap.md  007-experiment-tracking-contract.md  008-dense-bev-reset.md  009-bevfusion-baseline-reproduction.md  010-research-memory-contract.md
tests/: conftest.py  test_adapters.py  test_bevdet_env.py  test_bevfusion_env.py  test_checkpoints.py  test_cli.py  test_codex_loop.py  test_compat_numba.py  test_config.py  test_contracts.py  test_data_checks.py  test_datasets.py  test_distill.py  test_eval_nuscenes.py  test_eval_openlane.py  test_export.py  test_gap_analysis.py  test_latency.py  (+36 more)
(+161 files in other folders)
