[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "tsqbev-poc"
version = "0.1.0"
description = "Multimodal temporal sparse-query BEV proof of concept"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Achbogga" }]
dependencies = [
    "einops>=0.8.0,<0.9.0",
    "numpy>=1.26.0,<2.0.0",
    "pillow>=11.1.0,<12.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "rich>=13.9.0,<14.0.0",
    "torch>=2.6.0,<2.8.0",
    "torchvision>=0.21.0,<0.23.0",
    "tyro>=0.9.0,<0.10.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.130.0,<7.0.0",
    "mypy>=1.15.0,<2.0.0",
    "onnx>=1.17.0,<2.0.0",
    "onnxruntime>=1.20.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<0.12.0",
]
deploy = [
    "tensorrt-cu12>=10.16.0.72,<11.0.0",
]
data = [
    "nuscenes-devkit>=1.2.0,<2.0.0",
    "ortools>=9.12.0,<10.0.0",
    "pyquaternion>=0.9.9,<1.0.0",
    "scipy>=1.15.0,<2.0.0",
]

[project.scripts]
tsqbev = "tsqbev.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tsqbev"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "nuscenes.*",
    "scipy.*",
    "tensorrt",
    "torchvision.*",
]
ignore_missing_imports = true
